--- a/my-app/package.json
+++ b/my-app/package.json
@@ -42,9 +42,11 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.6",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.2",
+    "postcss-loader": "^8.1.1",
     "tailwindcss": "^4.0.6"
   }
 }
