--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^19.0.3",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
@@ -42,11 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.6",
     "@types/react-router-dom": "^5.3.3",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.2",
-    "postcss-loader": "^8.1.1",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "3.0.2"
   }
 }
